--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,18 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+@keyframes move-bg {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
 @layer base {
   :root {
     --background: 48 33% 94%; /* pale */
@@ -27,10 +39,9 @@ body {
     --border: 48 33% 88%;
     --input: 48 33% 98%;
     --ring: 45 88% 55%;
-    --radius: 0.5rem;
   }
   .dark {
-    --background: 216 33% 10%; /* off navy */
+    --background: 216 33% 5%;
     --foreground: 48 33% 94%; /* pale */
     --card: 216 33% 12%;
     --card-foreground: 48 33% 94%;
@@ -57,6 +68,15 @@ body {
     @apply border-border;
   }
   body {
-    @apply bg-background text-foreground;
+    @apply text-foreground;
+    background: linear-gradient(
+      90deg,
+      hsl(var(--background)),
+      hsl(var(--primary)),
+      #000000,
+      #000080
+    );
+    background-size: 400% 400%;
+    animation: move-bg 15s ease infinite;
   }
 }
