--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,10 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-  font-family: Arial, Helvetica, sans-serif;
-}
-
 @keyframes move-bg {
   0% {
     background-position: 0% 50%;
@@ -39,6 +35,7 @@ body {
     --border: 48 33% 88%;
     --input: 48 33% 98%;
     --ring: 45 88% 55%;
+    --radius: 0.5rem;
   }
   .dark {
     --background: 216 33% 5%;
@@ -60,6 +57,7 @@ body {
     --border: 216 33% 20%;
     --input: 216 33% 18%;
     --ring: 45 88% 55%;
+    --radius: 0.5rem;
   }
 }
 
@@ -68,13 +66,14 @@ body {
     @apply border-border;
   }
   body {
-    @apply text-foreground;
+    @apply bg-background text-foreground;
+    font-feature-settings: 'rlig' 1, 'calt' 1;
     background: linear-gradient(
-      90deg,
-      hsl(var(--background)),
+      -45deg,
       hsl(var(--primary)),
-      #000000,
-      #000080
+      hsl(216 33% 5%),
+      hsl(240 100% 25%),
+      hsl(45 88% 55%)
     );
     background-size: 400% 400%;
     animation: move-bg 15s ease infinite;
