--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -67,7 +67,7 @@
   }
   body {
     @apply text-foreground;
-    background: linear-gradient(-45deg, #000000, #b8860b, #000000);
+    background: linear-gradient(-45deg, #000000, #000000, #b8860b, #000000, #000000);
     background-size: 400% 400%;
     animation: gradient 15s ease infinite;
     font-feature-settings: 'rlig' 1, 'calt' 1;
